# apple

./: .hlint.yaml  ASM.md  CASES.md  CHANGELOG.md  Makefile  PROJ.md  QUICKCHECK.md  README.md  TILING.md  TODO.md  apple.cabal  cabal.project.local  weeder.toml
R/: Rbench.R  apple.R  mat.R  perf.R  test.R
Rc/: appler.c
app/: Main.hs
bench/: Bench.hs
c/: ffi.c
doc/: apple-by-example.md  user-guide.md
docs/: index.html
elementary/: cross.🍏
examples/: base.🍏  benford.🍎  grayd.🍏  graye.🍏  pascalsTriangle.🍎
include/: apple.h  apple_abi.h  m.h
janet/: japple.c
janet/test/: a.janet
lib/: E.chs
math/: amgm.🍏  bessel.🍏  chisqcdf.🍎  completeElliptic.🍏  cosim.🍏  erf.🍏  f11.🍎  fcdf.🍎  gamma.🍏  gini.🍏  gm.🍏  grayd.🍏  hypergeometric.🍏  ncdf.🍎  nome.🍎  pmean.🍎  rényi.🍏  tcdf.🍎
math/combinatorics/: choose.🍏
math/numbertheory/: factors.🍏  radical.🍎  𝜏.🍏
math/oeis/: A000081.🍏
math/poly/: div.🍏  mul.🍏  ruffini.🍎
math/q/: binomial.🍎  faq.🍏  poch.🍎  qneg.🍏  φ.🍎
math/stats/: cov.🍏  covar.🍏  r.🍎  welch.🍎  whiten.🍏
nb/: cosim.ipynb  fastmaxw.ipynb  kl-perf.ipynb  mandel.ipynb  maxpool2d.ipynb  mnist.ipynb  mul-perf.ipynb  orbit_apple.ipynb  polar.ipynb  rosetta-simd.ipynb  vmul-perf.ipynb
of/: Test.hs
pyc/: Makefile  README.md  apple.c
run/: Main.hs  QC.hs
src/: A.hs  B.hs  C.hs  CF.hs  CGen.hs  Dbg.hs  I.hs  IR.hs  L.x  LI.hs  LR.hs  Nm.hs  Op.hs  P.hs  Parser.y  Q.hs  R.hs  Sh.hs  Ty.hs
src/A/: Eta.hs  Opt.hs
src/Asm/: Aarch64.hs  Ar.hs  BB.hs  G.hs  M.hs  X86.hs
src/Asm/Aarch64/: Byte.hs  CF.hs  Fr.hs  Guess.hs  Opt.hs  P.hs  Sp.hs  T.hs
src/Asm/X86/: Byte.hs  CF.hs  P.hs  SpX.hs  Trans.hs
src/C/: Alloc.hs  CF.hs  Trans.hs
src/CF/: AL.hs
src/Hs/: A.hs
src/IR/: C.hs  CF.hs  Hoist.hs  Opt.hs
src/Nm/: IntMap.hs  IntSet.hs
src/Parser/: Rw.hs
src/Prettyprinter/: Ext.hs
src/R/: Dfn.hs  M.hs
src/Sys/: DL.chs
src/Ty/: Clone.hs  M.hs
test/: Spec.hs
test/data/: afilt.🍏  aoc.🍏  argmax1.🍏  cfLeft.🍏  consSum.🍏  cross.🍏  dotTil.🍏  filt.🍎  ix.🍎  ix2.🍏  ix3.🍎  ixGen.🍏  log.🍏  mT6.🍎  mT9.🍎  mfa.🍎  pf.🍎  polymorphic.🍎  predictionStep.🍏  primeMask.🍎  primes.🍏  rank.🍏  softmax.🍎  stepGray.🍏  strideConv.🍏  trainXor.🍎  vmul.🍏  zipTil.🍏
test/examples/: argmax.🍏  b.🍎  base.🍏  binet.🍎  convolve.🍎  dotprod.🍏  ellipticFourier.🍎  entropy.🍏  exp.🍏  fib.🍎  fibarr.🍎  identityMatrix.🍎  isPrime.🍏  isbn13.🍎  luhn.🍎  newton.🍎  poly.🍏  primes.🍎  ramanujanFact.🍎  regress.🍎  stepMnist.🍏  trainMnist.🍎  upperTriangular.🍏  weekMean.🍎  xor.🍎
test/harness/: aaf2_harness.c
test/py/: mat.py  mnist.py  py.py
test/py/xor/: a.py  m.py
vim/doc/: apple.txt
vim/ftplugin/: apple.vim
vim/syntax/: apple.vim
