cabal-version:      2.2
name:               apple
version:            0.3.0.0
license:            AGPL-3.0-only
license-file:       LICENSE
copyright:          Copyright: (c) 2022 Vanessa McHale
maintainer:         vamchale@gmail.com
author:             Vanessa McHale
synopsis:           Apple array language compiler
description:        Compiler for a typed, APL-inspired array language.
category:           Language, Array
build-type:         Simple
data-files:         ./include/apple_abi.h
extra-source-files:
    include/apple.h
    include/apple_p.h
    include/m.h
    test/examples/*.ðŸŽ
    test/examples/*.ðŸ
    bench/apple/*.ðŸ
    test/data/*.ðŸŽ
    test/data/*.ðŸ
    test/harness/*.c
    math/*.ðŸŽ
    math/*.ðŸ
    math/numbertheory/*.ðŸŽ
    math/numbertheory/*.ðŸ
    math/stats/*.ðŸŽ
    math/stats/*.ðŸ
    Makefile
    mk/os.mk
    pyc/Makefile
    pyc/*.c
    Rc/Makefile
    Rc/*.c
    c/ffi.c
    R/apple.R

extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/apple

common warn
    default-language: Haskell2010
    ghc-options:
        -Wall -fno-warn-missing-signatures -Wno-x-partial
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wredundant-constraints -Widentities -Wmissing-export-lists
        -Wcpp-undef -Wunused-packages -Wno-operator-whitespace-ext-conflict

library
    import: warn
    exposed-modules:
        Dbg
        P
        A
        Ty
        Ty.M
        Nm
        U
        I
        Sh
        L
        Parser
        CGen
        Hs.A
        Hs.FFI
        Sys.DL
        Prettyprinter.Ext
    build-tool-depends:
        alex:alex >=3.5.0.0, happy:happy >=2.1, hsc2hs:hsc2hs, c2hs:c2hs

    hs-source-dirs:     src
    other-modules:
        Bits
        CF
        CF.AL
        LI
        R
        LR
        R.Dfn
        R.M
        R.R
        Parser.Rw
        Ty.Clone
        A.Eta
        A.Opt
        Op
        C
        C.Alloc
        C.CF
        C.Trans
        IR
        IR.CF
        IR.Hoist
        IR.Opt
        IR.C
        Class.E
        Data.Copointed
        Asm.Ar
        Asm.Ar.P
        Asm.L
        Asm.LI
        Asm.BB
        Asm.X86
        Asm.X86.B
        Asm.X86.Byte
        Asm.X86.CF
        Asm.X86.Opt
        Asm.X86.Frame
        Asm.X86.P
        Asm.X86.Sp
        Asm.X86.SpX
        Asm.X86.Trans
        Asm.Aarch64
        Asm.Aarch64.B
        Asm.Aarch64.Byte
        Asm.Aarch64.CF
        Asm.Aarch64.Guess
        Asm.Aarch64.Fr
        Asm.Aarch64.P
        Asm.Aarch64.Sp
        Asm.Aarch64.Opt
        Asm.Aarch64.T
        Asm.G
        Asm.M
        Asm.CF
        Nm.IntMap
        Nm.IntSet
        Q

    default-extensions:
        DeriveFoldable DeriveFunctor LambdaCase OverloadedStrings
        TupleSections
    other-extensions:
        DeriveGeneric DeriveAnyClass StandaloneDeriving
        RankNTypes FlexibleContexts MagicHash BinaryLiterals
        ScopedTypeVariables MultiParamTypeClasses
        GeneralizedNewtypeDeriving

    build-depends:
        base >=4.17 && <5,
        prettyprinter >=1.7.0,
        deepseq,
        text,
        mtl >=2.2.2,
        containers >=0.6.0.1,
        microlens,
        microlens-mtl >=0.1.8.0,
        array,
        bytestring,
        transformers,
        unix,
        split >=0.2.0.0,
        extra >=1.7.4,
        composition-prelude >=1.1.0.1,
        dom-lt

library as
    import: warn
    exposed-modules:
        H
    other-modules: Nasm, As

    hs-source-dirs:   as

    build-depends:
        base,
        apple,
        process,
        temporary,
        prettyprinter,
        text,
        bytestring

foreign-library apple
    import:             warn
    type:               native-shared
    build-tool-depends: c2hs:c2hs >=0.19.1
    hs-source-dirs:     lib
    other-modules:      E
    include-dirs:       include
    install-includes:   apple.h
                        m.h

    build-depends:
        base,
        apple,
        bytestring >=0.11.0.0,
        prettyprinter >=1.7.0,
        text

    if os(linux)
        lib-version-info:   1:0:0

    if os(windows)
        options: standalone

executable atc
    import:           warn
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_apple
    autogen-modules:  Paths_apple

    build-depends:
        base,
        apple,
        optparse-applicative >=0.13.0.0

executable writeo
    import:           warn
    main-is:          Main.hs
    hs-source-dirs:   exe
    other-modules:    Paths_apple
    autogen-modules:  Paths_apple

    build-depends:
        base,
        as,
        optparse-applicative >=0.14.0.0,
        text

executable arepl
    import:           warn
    main-is:          Main.hs
    other-modules:    QC
    hs-source-dirs:   run
    default-extensions:
        OverloadedStrings

    build-depends:
        base,
        apple,
        bytestring,
        libffi,
        criterion,
        prettyprinter,
        haskeline,
        transformers,
        text,
        directory,
        filepath,
        QuickCheck,
        containers,
        split >=0.2.0.0

test-suite apple-test
    import:             warn
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -k1k"

    build-depends:
        base,
        apple,
        tasty,
        tasty-hunit,
        bytestring,
        hypergeometric >=0.1.4.0,
        fast-arithmetic,
        QuickCheck,
        tasty-quickcheck

test-suite apple-o
    import:           warn
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   of
    ghc-options:      -rtsopts -with-rtsopts=-k1k

    build-depends:
        base,
        as,
        tasty,
        tasty-hunit,
        temporary,
        process,
        text,
        filepath,
        directory

benchmark apple-bench
    import:             warn
    type:               exitcode-stdio-1.0
    main-is:            Bench.hs
    hs-source-dirs:     bench
    ghc-options:        -rtsopts

    build-depends:
        base,
        apple,
        criterion,
        statistics,
        bytestring,
        erf,
        hypergeometric >=0.1.2.0,
        deepseq
